--- a/WEB/WAR_ROOT/index.html
+++ b/WEB/WAR_ROOT/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Star Wars LCG Deck Builder</title>
+		<meta charset="utf-8" />
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 		<script type="text/javascript" src="core_data.js"></script>
 		<script type="text/javascript" src="deckbuilder.js">></script>
